# summy

./: .gitignore  Cargo.toml  LICENSE  README.md  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
crates/background/: Cargo.toml
crates/background/src/: lib.rs
crates/options/: Cargo.toml
crates/options-ui/: Cargo.toml
crates/options-ui/src/: lib.rs
crates/options/src/: lib.rs
crates/summy-options/: Cargo.toml
crates/summy-options/src/: lib.rs
extension/: background.js  constants.js  content.css  content.js  manifest.json  options.css  options.html  options.js
scripts/: package-extension.js  package-extension.sh  sync-versions.js  update-manifest.js
src/: lib.rs  session.rs  test.rs
test/: e2e.test.js  steps.js  utils.js
