[package]
name = "summy-background"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
readability = { git = "https://github.com/lucifer9/readability.git" }
anyhow = "1.0.97"
url = "2.4"
serde_json = "1.0.140"

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.genai]
git = "https://github.com/st3v/rust-genai.git"
branch = "wasm-target"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dev-dependencies]
wasm-bindgen-test = "0.3"
env_logger = "0.11"
log = "0.4"
unicode-segmentation = "1.12.0"

[profile.release]
opt-level = 3
