[package]
name = "summy-background"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
dom-content-extraction = "0.3.9"
anyhow = "1.0.86"
url = "2.4"
genai = { version = "0.1.23-WIP", path = "/Users/st3v/workspace/rust-genai" }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
env_logger = "0.11"
log = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3