[package]
name = "summy-options-ui"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.7", features = ["csr"] }
reactive_stores = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
summy-options = { path = "../summy-options" }
js-sys = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3