[package]
name = "summy-options"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3