[package]
name = "summy-options"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-extensions-sys = "0.4.1"
js-sys = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3